# cheminfomatics_ass2

./: .gitignore  CMakeLists.txt  Makefile  README.rst  a.cpp  a.out  graph0.dot  graph1.dot  main.cpp  run_tests.sh  test.py
report/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc
